--- a/doet/index.html
+++ b/doet/index.html
@@ -10,7 +10,8 @@ Date:
 </head>
 <body>
 	<p>The usability issue with the washing machine dial in the image seems to be related to the lack of clear labeling...</p>
-<img src="Downloads/images/Dial.jpg" alt="Washing machine dial with unclear labeling">
+	<img src="Downloads/images/Dial.jpg" alt="Dial Image">
+
 <p>The symbols are likely intended to represent different washing programs, but they may not be immediately intuitive to users...</p>
 
 	<p>The usability issue with the washing machine dial in the image seems to be related to the lack of clear labeling. The symbols are likely intended to represent different washing programs, but they may not be immediately intuitive to users. Here are a few specific concerns:</p>
