--- a/doet/index.html
+++ b/doet/index.html
@@ -6,22 +6,69 @@ Date:
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Exercise 1</title>
+	<title>Exercise 1 : Usability problems in everyday objects </title>
 </head>
 <body>
 	<p>The usability issue with the washing machine dial in the image seems to be related to the lack of clear labeling...</p>
 	<img src="doet/Dial.jpg" alt="Dial Image washer m">
 
 
-<p>The symbols are likely intended to represent different washing programs, but they may not be immediately intuitive to users...</p>
+	<h1>Usability Problems in Everyday Objects</h1>
 
-	<p>The usability issue with the washing machine dial in the image seems to be related to the lack of clear labeling. The symbols are likely intended to represent different washing programs, but they may not be immediately intuitive to users. Here are a few specific concerns:</p>
-<p>1. <strong>Unclear Icons</strong>: The icons used to represent different settings may not be universally understood. For example, a cotton plant symbol might suggest a cotton wash, but it's not immediately clear what the washing temperature or cycle specifics are.</p>
-<p>2. <strong>Lack of Text</strong>: Without any accompanying text, users have to rely solely on the symbols. If they are unfamiliar with the machine or if the icons are not self-explanatory, it could lead to confusion and incorrect program selection.</p>
-<p>3. <strong>Crowded Design</strong>: The arrangement of symbols around the dial is quite dense, which might make it difficult to quickly identify and select the desired setting.</p>
-<p>4. <strong>No Feedback Mechanism</strong>: There’s no immediate feedback or explanation when a user selects a setting, which can lead to uncertainty about whether the correct program has been chosen.</p>
-<p>Improving usability could involve adding text labels, simplifying icons, or incorporating a digital display that provides more detailed information about each setting.</p>
-This HTML snippet wraps the description in paragraph tags <p>, with each 
+    <div class="problem">
+        <h2>Problem 1: Oven Control Panel</h2>
+        <p><strong>Description:</strong><br>
+        The control panel on my oven has small, hard-to-read buttons and an overly complex interface. The labels on the buttons are written in tiny text, making it difficult to select the right function. Additionally, the layout is cluttered with too many options, some of which are rarely used.</p>
+
+        <p><strong>Usability Issues:</strong><br>
+        <ul>
+            <li><strong>Learnability:</strong> It is challenging for new users to understand how to operate the oven due to the complex interface. The lack of intuitive design forces users to constantly refer to the manual.</li>
+            <li><strong>Efficiency:</strong> It takes longer than necessary to input commands, especially when setting a timer or adjusting the temperature, due to the small, cramped buttons.</li>
+            <li><strong>Safety:</strong> The difficulty in reading the labels and understanding the controls could lead to incorrect settings, such as setting the temperature too high, which could result in burnt food or even fire hazards.</li>
+        </ul>
+        </p>
+
+        <p><strong>Suggested Fix:</strong><br>
+        Redesign the control panel to have larger buttons with clear, legible labels. Simplify the interface by grouping rarely used functions under a "More Options" menu, leaving the most common functions easily accessible. An intuitive layout with visual cues could also help in making the oven more user-friendly.</p>
+    </div>
+
+    <div class="problem">
+        <h2>Problem 2: Light Switch Panel</h2>
+        <p><strong>Description:</strong><br>
+        In my apartment, the light switches are all identical and placed in a row without any labeling, making it difficult to know which switch controls which light. This is especially problematic in areas with multiple light sources, such as the living room.</p>
+
+        <p><strong>Usability Issues:</strong><br>
+        <ul>
+            <li><strong>Learnability:</strong> It’s hard for new users or guests to quickly understand which switch controls which light. There’s no visual indication or label to guide them.</li>
+            <li><strong>Efficiency:</strong> Users often have to try multiple switches before finding the correct one, which wastes time.</li>
+            <li><strong>Safety:</strong> In the dark, fumbling with switches could lead to potential hazards, especially if there are obstacles in the room.</li>
+        </ul>
+        </p>
+
+        <p><strong>Suggested Fix:</strong><br>
+        Label each switch with a small, clear icon or text indicating the light it controls. Alternatively, use different styles or colors of switches for different light sources, making it easier to identify the correct one at a glance.</p>
+    </div>
+
+    <div class="problem">
+        <h2>Problem 3: Door Handle with Keyhole</h2>
+        <p><strong>Description:</strong><br>
+        The door handle on my front door has the keyhole placed directly beneath the handle. The keyhole is small and not illuminated, making it difficult to insert the key, especially at night.</p>
+
+        <p><strong>Usability Issues:</strong><br>
+        <ul>
+            <li><strong>Learnability:</strong> The keyhole’s placement beneath the handle is not immediately obvious, leading to confusion.</li>
+            <li><strong>Efficiency:</strong> It’s difficult to quickly unlock the door, especially in low-light conditions, due to the keyhole’s small size and poor visibility.</li>
+            <li><strong>Safety:</strong> Struggling to insert the key at night could delay entry into the house, potentially putting the user in an unsafe situation.</li>
+        </ul>
+        </p>
+
+        <p><strong>Suggested Fix:</strong><br>
+        Consider relocating the keyhole to a more visible and accessible position, possibly integrating a small LED light to illuminate the area. Another option could be to use a larger keyhole or a more intuitive locking mechanism, such as a keypad.</p>
+    </div>
+
+    <h2>Conclusion</h2>
+    <p>In analyzing these everyday objects, it’s clear that usability is often compromised in favor of aesthetics or cost-saving measures. By focusing on the LES dimensions—Learnability, Efficiency, and Safety—designers can create more user-friendly products that are both functional and intuitive.</p>
+
 
 </body>
 </html>
