--- a/doet/index.html
+++ b/doet/index.html
@@ -10,7 +10,7 @@ Date:
 </head>
 <body>
 	<p>The usability issue with the washing machine dial in the image seems to be related to the lack of clear labeling...</p>
-	<img src="doet/Dial.jpg" alt="Dial Image washer m">
+	<img src="https://www.google.com/imgres?q=washer%20dial&imgurl=https%3A%2F%2Fc8.alamy.com%2Fcomp%2FC72CBR%2Fwashing-machine-programme-dial-C72CBR.jpg&imgrefurl=https%3A%2F%2Fwww.alamy.com%2Fstock-photo%2Fwashing-machine-dial.html&docid=aDR7HX1IHUdyJM&tbnid=XzXIkJUEJxkkuM&vet=12ahUKEwimlJqsw4KIAxXQL9AFHa8tN-UQM3oECGwQAA..i&w=1300&h=956&hcb=2&ved=2ahUKEwimlJqsw4KIAxXQL9AFHa8tN-UQM3oECGwQAA" alt="Dial Image washer m">
 
 
 	<h1>Usability Problems in Everyday Objects</h1>
