--- a/doet/index.html
+++ b/doet/index.html
@@ -10,7 +10,7 @@ Date:
 </head>
 <body>
 	<p>The usability issue with the washing machine dial in the image seems to be related to the lack of clear labeling...</p>
-	<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.alamy.com%2Fstock-photo%2Fwashing-machine-dial.html&psig=AOvVaw1Me6GU797xR6i-GUq2mUvX&ust=1724207439951000&source=images&cd=vfe&opi=89978449&ved=2ahUKEwifqouxw4KIAxUlWDABHbSGMZYQjRx6BAgAEBg" alt="Dial Image washer m">
+	<img src="file:///C:/Users/daryn/Downloads/Dial.jpg" alt="Dial Image washer m">
 
 
  <h1>Usability Problems in Everyday Objects</h1>
