--- a/doet/index.html
+++ b/doet/index.html
@@ -1,6 +1,6 @@
 <!--CMPS3141-HCI - AS1-24S1
-Collaborators:
-Date:
+Collaborators:Daryn Forman
+Date:8/19/2024
  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -9,22 +9,23 @@ Date:
 	<title>Exercise 1 : Usability problems in everyday objects </title>
 </head>
 <body>
-	<p>The usability issue with the washing machine dial in the image seems to be related to the lack of clear labeling...</p>
-	<img src="file:///C:/Users/daryn/Downloads/Dial.jpg" alt="Dial Image washer m">
+	
 
 
  <h1>Usability Problems in Everyday Objects</h1>
-
+ 
     <div class="problem">
-        <h2>Problem 1: Oven Control Panel</h2>
+		<img src="file:///C:/Users/daryn/Downloads/Dial.jpg" alt="Dial Image washer " width="500" height="600">
+
+        <h2>Problem 1: washing machine Control Panel</h2>
         <p><strong>Description:</strong><br>
-        The control panel on my oven has small, hard-to-read buttons and an overly complex interface. The labels on the buttons are written in tiny text, making it difficult to select the right function. Additionally, the layout is cluttered with too many options, some of which are rarely used.</p>
+        The control panel on the washing machine dial shown above has small, hard-to-read buttons and an overly complex interface. The labels on the buttons are written in tiny text, making it difficult to select the right function. Additionally, the layout is cluttered with too many options, some of which are rarely used.</p>
 
         <p><strong>Usability Issues:</strong><br>
         <ul>
-            <li><strong>Learnability:</strong> It is challenging for new users to understand how to operate the oven due to the complex interface. The lack of intuitive design forces users to constantly refer to the manual.</li>
-            <li><strong>Efficiency:</strong> It takes longer than necessary to input commands, especially when setting a timer or adjusting the temperature, due to the small, cramped buttons.</li>
-            <li><strong>Safety:</strong> The difficulty in reading the labels and understanding the controls could lead to incorrect settings, such as setting the temperature too high, which could result in burnt food or even fire hazards.</li>
+            <li><strong>Learnability:</strong> It is challenging for new users to understand how to operate the washing machine due to the complex interface. The lack of easy design forces users to constantly refer to the manual.</li>
+            <li><strong>Efficiency:</strong> It takes longer than necessary to input commands, especially when setting a timer or adjusting the load and water content in the machine , due to the small, cramped buttons.</li>
+            <li><strong>Safety:</strong> The difficulty in reading the labels and understanding the controls could lead to incorrect settings, such as washing with warm water instead of cold which will cause the colors in colored clothes to run </li>
         </ul>
         </p>
 
