--- a/doet/index.html
+++ b/doet/index.html
@@ -15,7 +15,7 @@ Date:8/19/2024
  <h1>Usability Problems in Everyday Objects</h1>
  
     <div class="problem">
-		<img src="file:///C:/Users/daryn/Downloads/Dial.jpg" alt="Dial Image washer " width="50" height="50">
+		<img src="Dial.jpg" alt="Dial Image washer " width="50" height="50">
 
         <h2>Problem 1: washing machine Control Panel</h2>
         <p><strong>Description:</strong><br>
