--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,5 +1,5 @@
 <!--CMPS3141-HCI - AS1-24S1
-Collaborators:
+Collaborators:Daryn Forman
 Date:
  -->
 <!DOCTYPE html>
@@ -8,5 +8,7 @@ Date:
     <meta charset="UTF-8" />
     <title>Edit this to set page title</title>
   </head>
-  <body></body>
+  <body>
+    <img src="Daryn.jpg" alt="Daryn Delisha Forman " width="300" height="400">
+  </body>
 </html>
