--- a/homepage/index.html
+++ b/homepage/index.html
@@ -10,5 +10,32 @@ Date:
   </head>
   <body>
     <img src="Daryn.jpg" alt="Daryn Delisha Forman " width="300" height="400">
+
+    <header>
+      <h1>Welcome to [Your Name]'s Personal Website</h1>
+      <nav>
+          <ul>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="cv.html">CV</a></li>
+              <li><a href="contact.html">Contact</a></li>
+          </ul>
+      </nav>
+  </header>
+
+  <!-- Main Content Section -->
+  <main>
+      <!-- Picture and Bio -->
+      <section>
+          <img src="Daryn.jpg" alt="Picture of [Daryn Delisha Forman]" width="200" height="200">
+          <h2>About Me</h2>
+          <p>Hi! I'm [Your Name], a [Your Profession or Hobby]. I have a passion for [Your Interests or Hobbies]. This website is a showcase of my work, experience, and a way to get in touch. Feel free to browse around and learn more about what I do!</p>
+      </section>
+  </main>
+
+  <!-- Footer Section -->
+  <footer>
+      <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+  </footer>
+
   </body>
 </html>
