--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -8,5 +8,24 @@ Date:
     <meta charset="UTF-8" />
     <title>Edit this to set page title</title>
   </head>
-  <body></body>
+  <body>
+    <h2>Contact Us</h2>
+    <form action="mailto:youremail@example.com" method="post" enctype="text/plain">
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name" placeholder="Your Name" required><br><br>
+
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" placeholder="Your Email" required><br><br>
+
+        <label for="subject">Subject:</label><br>
+        <input type="text" id="subject" name="subject" placeholder="Subject" required><br><br>
+
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="body" placeholder="Your Message" required></textarea><br><br>
+
+        <button type="submit">Send Message</button>
+    </form>
+
+
+  </body>
 </html>
