--- a/expenses/index.html
+++ b/expenses/index.html
@@ -9,7 +9,82 @@ Date:
 	<title>Edit this to set page title - Exercise 2</title>
 </head>
 <body>
+	<header>
+        <h1>Couple Expenses Tracker</h1>
+        <p>Keep track of shared and personal expenses between Neo and Trinity.</p>
+    </header>
 
+    <!-- Main Content Section -->
+    <main>
+
+        <!-- Form for Adding New Expenses -->
+        <section>
+            <h2>Add New Expense</h2>
+            <form action="#" method="post">
+                <label for="payer">Who paid?</label>
+                <select id="payer" name="payer">
+                    <option value="neo">Neo</option>
+                    <option value="trinity">Trinity</option>
+                    <option value="joint">Joint Account</option>
+                </select>
+
+                <label for="amount">Amount</label>
+                <input type="number" id="amount" name="amount" placeholder="Enter amount" required>
+
+                <label for="expense-type">Expense Type</label>
+                <select id="expense-type" name="expense-type">
+                    <option value="personal">Personal</option>
+                    <option value="joint">Joint</option>
+                </select>
+
+                <label for="description">Description</label>
+                <input type="text" id="description" name="description" placeholder="Enter description">
+
+                <button type="submit">Add Expense</button>
+            </form>
+        </section>
+
+        <!-- Balance Summary Section -->
+        <section>
+            <h2>Current Balances</h2>
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th>For Trinity</th>
+                        <th>For Neo</th>
+                        <th>For Joint</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Trinity Paid</td>
+                        <td>0</td>
+                        <td>-X</td>
+                        <td>-X/2</td>
+                    </tr>
+                    <tr>
+                        <td>Neo Paid</td>
+                        <td>X</td>
+                        <td>0</td>
+                        <td>X/2</td>
+                    </tr>
+                    <tr>
+                        <td>Joint Paid</td>
+                        <td>X/2</td>
+                        <td>-X/2</td>
+                        <td>0</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+
+    </main>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Couple Expenses App. All rights reserved.</p>
+    </footer>
 </body>
 </html>
 
