first serious comit

--- a/doet/index.html
+++ b/doet/index.html
@@ -17,20 +17,23 @@ Date:8/19/2024
     <div class="problem">
 		<img src="Dial.jpg" alt="Dial Image washer " width="200" height="200">
 
-        <h2>Problem 1: washing machine Control Panel</h2>
-        <p><strong>Description:</strong><br>
-        The control panel on the washing machine dial shown above has small, hard-to-read buttons and an overly complex interface. The labels on the buttons are written in tiny text, making it difficult to select the right function. Additionally, the layout is cluttered with too many options, some of which are rarely used.</p>
+        <h2>Problem 1: Washing Machine Control Panel</h2>
+        <p><strong> What is wrong with it? </strong><br>
+        The control panel on the washing machine dial shown above has hard-to-read buttons.The symbols are not immediately clear to the person wanting to use the washer.The pictures on the dial would require the user to have some type of knowledge before using the machine hence it is not good for a first time user.Additionally, the layout is cluttered with too many options, some of which are rarely used.</p>
 
         <p><strong>Usability Issues:</strong><br>
         <ul>
-            <li><strong>Learnability:</strong> It is challenging for new users to understand how to operate the washing machine due to the complex interface. The lack of easy design forces users to constantly refer to the manual.</li>
-            <li><strong>Efficiency:</strong> It takes longer than necessary to input commands, especially when setting a timer or adjusting the load and water content in the machine , due to the small, cramped buttons.</li>
-            <li><strong>Safety:</strong> The difficulty in reading the labels and understanding the controls could lead to incorrect settings, such as washing with warm water instead of cold which will cause the colors in colored clothes to run </li>
+            <li><strong>Learnability:</strong> It is challenging for new users to understand how to operate the washing machine and they will constantly have to read the manual. </li>
+            <li><strong>Efficiency:</strong> It  will take longer to do laundry , especially when setting a timer or adjusting the load and water content in the machine , due to the small, cramped buttons.</li>
+            <li><strong>Safety:</strong>  Because it is so hard to read , this could lead to the user inputing  incorrect settings, such as washing with warm water instead of cold which will cause the colors in colored clothes to run </li>
         </ul>
         </p>
 
         <p><strong>Suggested Fix:</strong><br>
-        Redesign the control panel to have larger buttons with clear, legible labels. Simplify the interface by grouping rarely used functions under a "More Options" menu, leaving the most common functions easily accessible. An intuitive layout with visual cues could also help in making the oven more user-friendly.</p>
+       A recomendation for improving the design of this washing machine dial is to 
+       <li><strong>Add Text labels :</strong> add small text labels besides the pictures to clearly state what each symbol represents </li>
+       <li><strong>Use Color Coding :</strong> this will make it easier for the user to quickly find the right cycle </li>
+       <li><strong>Increase icon size :</strong> Larger icons are easier to see and understand hence reducing the users chances of making mistakes </p>
     </div>
 
     <div class="problem">
