--- a/doet/index.html
+++ b/doet/index.html
@@ -37,7 +37,8 @@ Date:8/19/2024
     </div>
 
     <div class="problem">
-        <h2>Problem 2: Light Switch Panel</h2>
+        <img src="B1.jpeg" alt="Dial Image washer " width="200" height="200"> <img src="b2.jpeg" alt="Dial Image washer " width="200" height="200">
+        <h2>Problem 2: Inserting Batteries</h2>
         <p><strong>Description:</strong><br>
         In my apartment, the light switches are all identical and placed in a row without any labeling, making it difficult to know which switch controls which light. This is especially problematic in areas with multiple light sources, such as the living room.</p>
 
