--- a/doet/index.html
+++ b/doet/index.html
@@ -13,9 +13,9 @@ Date:8/19/2024
 
 
  <h1>Usability Problems in Everyday Objects</h1>
- 
+ <img src="Dial.jpg" alt="Dial Image washer " width="200" height="200">
     <div class="problem">
-		<img src="Dial.jpg" alt="Dial Image washer " width="200" height="200">
+		
 
         <h2>Problem 1: Washing Machine Control Panel</h2>
         <p><strong> What is wrong with it? </strong><br>
@@ -37,17 +37,17 @@ Date:8/19/2024
     </div>
 
     <div class="problem">
-        <img src="B1.jpeg" alt="Dial Image washer " width="200" height="200"> <img src="b2.jpeg" alt="Dial Image washer " width="200" height="200">
+    
         <h2>Problem 2: Inserting Batteries</h2>
+        <img src="B1.jpeg" alt="Dial Image washer " width="200" height="200"> <img src="b2.jpeg" alt="Dial Image washer " width="200" height="200">
         <p><strong>Description:</strong><br>
-        In my apartment, the light switches are all identical and placed in a row without any labeling, making it difficult to know which switch controls which light. This is especially problematic in areas with multiple light sources, such as the living room.</p>
+        when it comes to batteries,they usualy give me some trouble.They can be hard to figure out which way to insert the batteries or which size to use if its not clearly marked on the object or appliance.They are aslo a bit hard to take out and sometimes i find myself clawing into them with my fingers to remove or hitting on the appliance to remove them.I also dont know when they are about to die </p>
 
         <p><strong>Usability Issues:</strong><br>
         <ul>
-            <li><strong>Learnability:</strong> It’s hard for new users or guests to quickly understand which switch controls which light. There’s no visual indication or label to guide them.</li>
-            <li><strong>Efficiency:</strong> Users often have to try multiple switches before finding the correct one, which wastes time.</li>
-            <li><strong>Safety:</strong> In the dark, fumbling with switches could lead to potential hazards, especially if there are obstacles in the room.</li>
-        </ul>
+            <li><strong>Learnability:</strong> It’s hard for users  to correctly insert or use a battery especially if the positive and negative signs arent marked on them.</li>
+            <li><strong>Efficiency:</strong> because we do not know when the battery will run out this can lead to interuptions constantly with our devices and appliances.It can also be time consuming if the batteries are hard to take out.</li>
+            <li><strong>Safety:</strong> the batteries can leak,overheat or explode if misused.</li>
         </p>
 
         <p><strong>Suggested Fix:</strong><br>
