--- a/doet/index.html
+++ b/doet/index.html
@@ -51,7 +51,9 @@ Date:8/19/2024
         </p>
 
         <p><strong>Suggested Fix:</strong><br>
-        Label each switch with a small, clear icon or text indicating the light it controls. Alternatively, use different styles or colors of switches for different light sources, making it easier to identify the correct one at a glance.</p>
+            <li><strong>Battery life indicators :</strong> place a simple battery life indicator such as an led light </li>
+            <li><strong>textured surface </strong> Design batteries with a textured surface to provide better grip during removal.</li>
+            <li><strong>Color coded polarity markings :</strong> the pusitive and negative sides of the batter can be color coded so its easier for the use to know which side is which. </p></p>
     </div>
 
     <div class="problem">
