--- a/doet/index.html
+++ b/doet/index.html
@@ -57,20 +57,24 @@ Date:8/19/2024
     </div>
 
     <div class="problem">
-        <h2>Problem 3: Door Handle with Keyhole</h2>
-        <p><strong>Description:</strong><br>
-        The door handle on my front door has the keyhole placed directly beneath the handle. The keyhole is small and not illuminated, making it difficult to insert the key, especially at night.</p>
+        <h2>Problem 3: Elevator Buttons </h2>
+        <img src= "elevator.jpeg" alt="Dial Image washer " width="200" height="200">
+
+        <p><strong>What is wrong with it? :</strong><br>
+        The problem with the elevator buttons shown above is that it is not properly labeled ,hard to use and the buttons are clustered together.</p>
 
         <p><strong>Usability Issues:</strong><br>
         <ul>
-            <li><strong>Learnability:</strong> The keyhole’s placement beneath the handle is not immediately obvious, leading to confusion.</li>
-            <li><strong>Efficiency:</strong> It’s difficult to quickly unlock the door, especially in low-light conditions, due to the keyhole’s small size and poor visibility.</li>
-            <li><strong>Safety:</strong> Struggling to insert the key at night could delay entry into the house, potentially putting the user in an unsafe situation.</li>
+            <li><strong>Learnability:</strong>The buttons are not not clearly labeled with their floors and so it makes it harder for the user to quickly press their floor button .</li>
+            <li><strong>Efficiency:</strong> because the layout is clustered it can cause delays as the user try to find the correct button</li>
+            <li><strong>Safety:</strong> The help button is placed at the bottom which might not be accessible in an emergency.</li>
         </ul>
         </p>
 
-        <p><strong>Suggested Fix:</strong><br>
-        Consider relocating the keyhole to a more visible and accessible position, possibly integrating a small LED light to illuminate the area. Another option could be to use a larger keyhole or a more intuitive locking mechanism, such as a keypad.</p>
+        <p><strong>Suggested Fix:</strong><br> Organize the buttons in a logical sequence and ensure clear labeling.
+            <li><strong>Layout :</strong> place a simple battery life indicator such as an led light </li>
+            <li><strong>Reposion the hep button :</strong>place the Help button higher up the panel, ideally at a height that is easily accessible for all users  </li>
+            <li><strong>Group related buttons together </strong> e.g. all floor buttons in one area, function buttons like door open/close and help in another.</li> </p>
     </div>
 
     <h2>Conclusion</h2>
