--- a/homepage/index.html
+++ b/homepage/index.html
@@ -12,7 +12,7 @@ Date:
    
 
     <header>
-      <h1>Welcome to [Your Name]'s Personal Website</h1>
+      <h1>Welcome to Daryn's Personal Website</h1>
       <nav>
           <ul>
               <li><a href="index.html">Home</a></li>
