--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -44,7 +44,16 @@ Date:
       <!--Add Test Assessments-->
       <div>
 
-        
+        <div>
+          Test 1:
+          <input type="number" min="0" max="100" v-model="assessments.test1" />
+          / 100
+        </div>
+        <div>
+          Test 2:
+          <input type="number" min="0" max="100" v-model="assessments.test2" />
+          / 100
+        </div>
       </div>
       
 
