--- a/grade-calculator/index.html
+++ b/grade-calculator/index.html
@@ -11,6 +11,8 @@ Date:
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Edit this with title of exercise</title>
     <script src="index.js" type="module"></script>
+    <script src="https://mavue.mavo.io/mavue.js" type="module"></script>
+
   </head>
   <body>
     <div id="grade_calc">
@@ -28,12 +30,14 @@ Date:
 
       <div>
         <!--Add v-for loop for homeworks and iterate data-->
-        {{ homeworks.length }} homeworks:
-        <div v-for="(homework, index) in homeworks" :key="index">
-          Homework {{ index + 1 }}:
-          <input type="number" min="0" max="100" v-model="homeworks[index]" />
-          / 100
+        <div>
+          {{ homeworks.length }} homeworks:
+          <div v-for="(homework, index) in homeworks" :key="index">
+            Homework {{ index + 1 }}: <input type="number" min="0" max="100" v-model="homeworks[index]" /> / 100
+          </div>
+          <button @click="addHomework">Add homework</button>
         </div>
+        
         </div>
         
           </div>
